# building-blocks

./: Cargo.toml  PLANS.md  README  README. md  README.md  justfile  ron.toml
building-blocks/: Cargo.toml
building-blocks/examples/example_universe/: universe.ron
building-blocks/src/: main.rs
building-blocks/src/client/: mod.rs
building-blocks/src/client/render/patch/: mod.rs
building-blocks/src/client/view/patch/: mod.rs
building-blocks/src/resources/: block_type.rs  example.rs  material.rs  mod.rs
building-blocks/src/server/: messages.rs  mod.rs  test.rn
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: main.rs  sketch.txt
crates/common/src/client/: messages.rs
crates/common/src/server/: mod.rs
crates/common/src/world/: example.rs  mod.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/info/: mod.rs
examples/example_server/: server.ron
examples/example_universe/: universe.ron
examples/example_universe/blocks/: dirt.ron
examples/example_universe/packs/toyvox-default/: pack.ron
examples/example_universe/textures/: main_atlas.ron
examples/example_world/: world.ron
examples/websocket-test/Test Collection/: Building Blocks.krproj  Echo.krop  Home.krop  Main.krenv  directory.krpref  readme.md
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/render/: Sprite-0002.aseprite  mod.rs  shader.wgsl
src/block/: mod.rs
src/client/: mod.rs
src/client/app/: mod.rs
src/client/app/render/: mod.rs  render_target.rs  views.rs
src/client/application/: mod.rs
src/client/application/render/: camera.rs  mod.rs  pipeline.rs  render_target.rs  shader.wgsl  tmp.rs
src/client/gui/: mod.rs
src/client/gui/render/: fullscreen_passthrough_template.wgsl  mod.rs  pipeline.rs  shader.wgsl  views.rs
src/client/render/: mod.rs
src/client/render/gpu/: mod.rs
src/client/render/old/: mod.rs  views.rs
src/client/render/patch/: mod.rs
src/client/render/render_target/: mod.rs
src/client/view/patch/: mod.rs
src/data/: mod.rs
src/data_packs/: definitions.rs  example.rs  mod.rs
src/messaging/: mod.rs  server.rs
src/models/: mod.rs
src/resources/: block_type.rs  data_pack.rs  example.rs  mod.rs  texture.rs  universe.rs
src/server/: messages.rs  mod.rs  test.rn
src/universe/: mod.rs
src/world/: mod.rs
src/world/block/: mod.rs
src/world/camera/: mod.rs
(+21 files in other folders)
