[package]
name = "building-blocks"
publish = false
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.25.0"
generational-arena = { version = "0.2.9", features = ["serde"] }
glam = { version = "0.32.1", features = ["bytemuck", "serde"] }
image = "0.25.10"
indexmap = "2.14.0"
pollster = "0.4.0"
ron = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
wgpu = "29.0.1"
winit = "0.30.13"
