[package]
name = "building-blocks"
publish = false
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.25.0"
generational-arena = { version = "0.2.9", features = ["serde"] }
glam = { version = "0.32.1", features = ["bytemuck", "serde"] }
image = { version = "0.24", default-features = false, features = ["png"] }
indexmap = "2.14.0"
pollster = "0.4.0"
ron = "0.12.1"
rune = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
smol = "2.0.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
wgpu = "29.0.1"
winit = "0.30.13"

[profile.release]
opt-level = "z"     # Optimize for size ('s' is small, 'z' is even smaller)
lto = true          # Enable Link Time Optimization (huge for size!)
codegen-units = 1   # Reduces parallel compilation to allow for better optimization
panic = "abort"     # Removes the "unwind" code; makes binary smaller, but you lose stack traces
strip = true        # Automatically strips symbols (replaces the manual 'strip' command)
