[package]
name = "building-blocks-server"
publish = false
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
building-blocks-common = { path = "../common" }
fastwebsockets = { version = "0.10.0", features = ["upgrade", "with_axum"] }
ron = "0.12.1"
serde = "1.0.228"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
